# super

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
super/: cli.py  evaluator.py  interpreter.py  lexer.py
super.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
super_language.egg-info/: PKG-INFO  SOURCES.txt
