[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super"
version = "1.0.0"
description = "SuperStaticLanguage (.ssl) runner and CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["language", "ssl", "superstaticlanguage", "runner", "interpreter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
super = "super.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["super*"]
